styles/sass/styles.scss
@import url('https://fonts.cdnfonts.com/css/pokemon-solid');
@import "partials/setup";
@import "partials/variables";
@import "partials/typography";


// general styles
.wrapper {
    margin: 0 auto;
    max-width: 1200px;
    width: 100%;
}

ul {
    list-style-type: none;
}

// header
header {
    background: linear-gradient(black, $primaryRed, white);
}

h1 {
    padding: 50px;
    text-shadow: 8px 8px black;
}

// main
// first section - pokemon info

section {
    text-align: center;
    &:first-of-type {
        background-image: url('../assets/lightning.png');
        background-position: center;
        background-size: cover;
    }
    .pokemonInfo {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 70%;
        margin: 0 auto;
        background-color: $yellowColor;
        border: 10px solid $primaryRed;
        border-radius: 50px;
        padding: 50px;
        height: 50vh;
        .imgContainer {
            width: 50%;
            img {
                width: 60%;
                transition: 0.5s cubic-bezier(.22,.82,.83,1);
                &:hover, &:focus {
                    width: 70%;
                    filter: drop-shadow(0 10px 0.6rem black);
                }
            }
        }
        .textContainer {
            width: 50%;
            h2 {
                padding-bottom: 30px;
                text-shadow: 5px 5px red;
            }
            .typeAndAbilities {
                display: flex;
                justify-content: center;
                .typeContainer, .abilitiesContainer {
                    padding: 10px;
                    width: 50%;
                    h3 {
                        padding: 10px;
                        text-shadow: 5px 5px red;
                    }
                    li {
                        padding: 10px;
                        margin: auto;
                        height: 50px;
                        text-transform: capitalize;
                        &:hover .icon {
                            filter: drop-shadow(0 10px 0.6rem black);
                            width: 32px;
                            animation: wobble;
                            animation-duration: 0.5s;
                        }
                
                    }
                }
            }
        }
    }
    .imgPlaceholder {
        padding: 100px;
        img {
            width: 20%;
        }
    }

    // class for pokemon type icons
    .icon {
       width: 30px;
       margin-bottom: -10px;
       padding-top: 10px;
       transition: 0.5s cubic-bezier(.22,.82,.83,1) ease;
       transition: animation wobble;
    
    }

   .pikachuGif {
        display: flex;
        justify-content: center;
        margin-top: 20px;
        img {
            width: 20%;
        }
    }
    button {
        padding: 20px 40px;
        border: transparent;
        border-radius: 15px;
        margin: 50px 0;
        background-color: $yellowColor;
        border: 5px solid $primaryRed;
        &:hover, &:focus {
            color: yellow;
            background-color: $primaryRed;
            transition: 0.5s background-color ease;
        }
    }
}

// section section - banner
.banner img {
    width: 100%;
}

// footer
footer {
    padding: 20px;
    background: $primaryRed;
}

@import "partials/mediaqueries";

